--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,18 +1,17 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-
 <main class="container py-5">
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <form method="POST" class="card card-body">
-                <h2 class="text-center">Sign Up</h2>
+                <h2 class="text-center">Log In</h2>
                 {{error}}
                 {% csrf_token %}
                 {{form}}
 
                 <button class="btn btn-secondary mt-3">
-                    SignUp
+                    LogIn
                 </button>
             </form>
         </div>
