--- a/portfolio/templates/layouts/base.html
+++ b/portfolio/templates/layouts/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-
-    
+    <meta name="author" content="LSequera" />
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e4cc02762e.js" crossorigin="anonymous"></script>
   </head>
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">{{title}}</a>
+          <a class="navbar-brand" href="/"><img src = "{% static 'TakionsLogo.png' %}" class="mr-3" alt="Logo" width="37" height="32"/> {{title}}</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,7 +46,7 @@
             <form class="d-flex" role="search">
               <input class="form-control me-2 bg-dark" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-secondary" type="submit">
-                :)
+                <i class="fas fa-search"></i>
               </button>
             </form>
           </div>
