--- a/portfolio/templates/projects.html
+++ b/portfolio/templates/projects.html
@@ -1,5 +1,29 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<h3>Projects</h3>
+
+<div class="row my-4 text-center">
+
+    <h3>My Projects</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, aperiam?</p>
+  
+    {% for project in projects %}
+    <div class="col-md-4 p-4">
+      <div class="card bg-black card-project">
+        <img src="{{project.image.url }}" class="card-img-top" />
+  
+        <div class="card-body">
+  
+          <h2>{{ project.title }}</h2>
+          <p>{{ project.description }}</p>
+  
+          {% if project.url %}
+          <a href="{{project.url}}" class="btn btn-light rounded-0 btn-sm" target="__blank" rel="noreferrer">Visit the Project</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+</div>
+  
 {% endblock %}
