--- a/portfolio/templates/create_project.html
+++ b/portfolio/templates/create_project.html
@@ -2,17 +2,32 @@
 
 {% block content %}
 
-<h1>Create Project</h1>
-
 <main class="container py-5">
     <section class="card card-body text-light bg-dark border border-secondary">
         <h2>Create Project</h2>
 
         {{error}}
-        <form action="/create_task/" method="POST">
+        <form action="{% url 'create_project' %}" method="POST">
             {% csrf_token %}
-            {{form.as_p}}
+            <div class="mb-3">
+                <label for="title" class="form-label">{{ form.title.label }}</label>
+                <input type="text" class="form-control " id="title" name="title" placeholder="Example">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label">{{ form.description.label }}</label>
+                <textarea class="form-control" id="description" name="description"></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">{{ form.image.label }}</label>
+                <input class="form-control" type="file" name="image" id="image">
+              </div>
+            <div class="mb-3">
+                <label for="url" class="form-label">{{ form.url.label }}</label>
+                <input type="url" class="form-control" name="url" id="url" placeholder="http://example.domain">
+            </div>
+            <div class="mb-3">
 
+            </div>
             <button class="btn btn-secondary">Save</button>
         </form>
     </section>
