--- a/portfolio/templates/layouts/base.html
+++ b/portfolio/templates/layouts/base.html
@@ -8,8 +8,8 @@
     <title>{{title}}</title>
     <meta name="author" content="LSequera" />
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css">
     <script src="https://kit.fontawesome.com/e4cc02762e.js" crossorigin="anonymous"></script>
   </head>
 <body class="bg-dark">
