Fixed problem on uploading files, media routes, and custom forms in template

--- a/portfolio/templates/create_project.html
+++ b/portfolio/templates/create_project.html
@@ -7,7 +7,7 @@
         <h2>Create Project</h2>
 
         {{error}}
-        <form action="{% url 'create_project' %}" method="POST">
+        <form action="{% url 'create_project' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="title" class="form-label">{{ form.title.label }}</label>
