--- a/portfolio/templates/projects.html
+++ b/portfolio/templates/projects.html
@@ -11,7 +11,7 @@
     <div class="col-md-4 p-4">
       <div class="card bg-black card-project">
         <img src="{{ project.image.url }}" class="card-img-top" />
-  
+        <p>{{ project.image.url }}</p>
         <div class="card-body">
   
           <h2>{{ project.title }}</h2>
