Fising project details template and access from project list

--- a/portfolio/templates/project_detail.html
+++ b/portfolio/templates/project_detail.html
@@ -1,4 +1,4 @@
-{% extends 'layaouts/base.html' %}
+{% extends 'layouts/base.html' %}
 
 {% block content %}
 
@@ -10,11 +10,12 @@
         <h3>Tasks</h3>
         {% for task in task_list %}
             <div class="card card-body border border-secondary">
-                {{ task.title }}
+                <h4>{ task.title }}</h4>{
+                <p>{{ task.description }}</p>
             </div>
         {% endfor %}
     </section>
 </main>
 
 
-{% end block %}
+{% endblock %}
