Fixing creation task view (project instance) and project detail template

--- a/portfolio/templates/project_detail.html
+++ b/portfolio/templates/project_detail.html
@@ -10,7 +10,7 @@
         <h3>Tasks</h3>
         {% for task in task_list %}
             <div class="card card-body border border-secondary">
-                <h4>{ task.title }}</h4>{
+                <h4>{{ task.title }}</h4>
                 <p>{{ task.description }}</p>
             </div>
         {% endfor %}
