--- a/portfolio/templates/create_task.html
+++ b/portfolio/templates/create_task.html
@@ -20,15 +20,15 @@
                 </div>
                 <div class="mb-3">
                     <label for="importance" class="form-label">{{ form.importance.label }}</label>
-                    <input type="range" class="form-range" name="importance" id="importance" min="0" max="1" step="0.01">
+                    <input type="range" class="form-range" name="importance" id="importance" min="0.00" max="1.00" step="0.01">
                 </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" value="True" id="completed" name="completed">
                     <label for="completed" class="form-check-label">{{ form.completed.label }}</label>
                 </div>
                 <div class="mb-3">
-                    <label for="importance" class="form-label">{{ form.project.label }}</label>
-                    <select class="form-select" aria-label="Default">
+                    <label for="project" class="form-label">{{ form.project.label }}</label>
+                    <select class="form-select" aria-label="Default" id="project" name="project"> 
                         {% for project in projects %}
                         <option value="{{ project.pk }}">{{ project.title }}</option>
                         {% endfor %}
