--- a/portfolio/templates/project_detail.html
+++ b/portfolio/templates/project_detail.html
@@ -9,7 +9,7 @@
         <p>{{ project.description }}</p>
         <h3>Tasks</h3>
         {% for task in task_list %}
-            <div class="card card-body border border-secondary">
+            <div class="card card-body border border-secondary mt-3">
                 <h4>{{ task.title }}</h4>
                 <p>{{ task.description }}</p>
             </div>
