--- a/portfolio/templates/layouts/base.html
+++ b/portfolio/templates/layouts/base.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/e4cc02762e.js" crossorigin="anonymous"></script>
   </head>
 <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/"><img src = "{% static 'TakionsLogo.png' %}" class="mr-3" alt="Logo" width="37" height="32"/> {{title}}</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
