--- a/portfolio/templates/project_detail.html
+++ b/portfolio/templates/project_detail.html
@@ -11,7 +11,7 @@
         {% for task in task_list %}
             <div class="card border border-secondary mt-3">
                 <div class="card-header d-flex">
-                    <h4><i class="fa-regular fa-clock"></i> {{ task.title }}</h4><span class="badge bg-primary ms-auto">{{ task.creation_date }}</span>
+                    <h4><i class="fa-regular fa-clock"></i> {{ task.title }}</h4><span class="badge rounded-pill text-bg-secondary ms-auto">{{ task.creation_date }}</span>
                 </div>
                 <div class="card-body"> 
                     <p>{{ task.description }}</p>
@@ -21,7 +21,7 @@
                         <a href="" class="btn btn-primary btn-sm"><i class="fa-solid fa-pencil"></i> Edit</a>
                         <a href="" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash"></i> Delete</a>
                     </div>
-                    <a href="" class="btn btn-success btn-sm ms-auto"><i class="fa-solid fa-square-check "></i> Completed</a>
+                    <a href="" class="btn btn-success btn-sm ms-auto"><i class="fa-solid fa-square-check "></i> Mark as completed</a>
                 </div>    
             </div>
         {% endfor %}
